Add carousel content

--- a/portfolio-site/src/components/Home.css
+++ b/portfolio-site/src/components/Home.css
@@ -9,6 +9,7 @@
     ;
     justify-items: center;
     align-items: center;
+    background-image: linear-gradient(to right, green, lightgreen);
 }
 
 .headshot {
