--- a/portfolio-site/src/components/Home.css
+++ b/portfolio-site/src/components/Home.css
@@ -1,8 +1,8 @@
-.grid-container {
+/* .grid-container {
     display: grid;
     padding: 50px;
     grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: minmax(0, 1fr) minmax(0, 2fr);
+    grid-template-columns: minmax(0, 1fr);
     grid-template-areas:
         "headshot about-me"
         "carousel carousel"
@@ -10,16 +10,49 @@
     justify-items: center;
     align-items: center;
     background-image: linear-gradient(to right, green, lightgreen);
+} */
+
+.grid-container {
+    /* background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.742), lightgrey); */
+    display: grid;
+    max-height: 100%;
+    grid-template-rows: 1fr 3fr;
+    grid-template-columns: minmax(0, 1fr);
+    grid-template-areas:
+        "about-container"
+        "carousel-container"
+    ;
+    justify-items: center;
+    row-gap: 30px;
+}
+
+.about-container {
+    /* background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.742), lightgrey); */
+    background-color: rgb(197, 197, 197);
+    grid-area: about-container;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 20px
 }
 
 .headshot {
     grid-area: headshot;
-    height: 400px;
-    width: 400px;
+    height: 200px;
+    width: 200px;
     padding: 10px;
+    align-self: center;
 }
 
 .about-me {
     grid-area: about-me;
-
+    align-self: center;
+    text-align: right;
+    /* width: 75%; */
 }
+
+.carousel-container {
+    grid-area: carousel-container;
+    display: grid;
+}
+
