--- a/portfolio-site/src/components/Home.css
+++ b/portfolio-site/src/components/Home.css
@@ -1,39 +1,11 @@
-/* .grid-container {
-    display: grid;
-    padding: 50px;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: minmax(0, 1fr);
-    grid-template-areas:
-        "headshot about-me"
-        "carousel carousel"
-    ;
-    justify-items: center;
-    align-items: center;
-    background-image: linear-gradient(to right, green, lightgreen);
-} */
-
-.grid-container {
-    /* background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.742), lightgrey); */
-    display: grid;
-    max-height: 100%;
-    grid-template-rows: 1fr 3fr;
-    grid-template-columns: minmax(0, 1fr);
-    grid-template-areas:
-        "about-container"
-        "carousel-container"
-    ;
-    justify-items: center;
-    row-gap: 30px;
-}
-
 .about-container {
-    /* background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.742), lightgrey); */
     background-color: rgb(197, 197, 197);
     grid-area: about-container;
     display: flex;
     width: 100%;
     justify-content: center;
-    gap: 20px
+    gap: 20px;
+    margin-bottom: 30px;
 }
 
 .headshot {
@@ -47,12 +19,6 @@
 .about-me {
     grid-area: about-me;
     align-self: center;
-    text-align: right;
-    /* width: 75%; */
-}
-
-.carousel-container {
-    grid-area: carousel-container;
-    display: grid;
+    text-align: center;
 }
 
